--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#b30000</color>
     <color name="colorPrimaryDark">#800000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorLiverpool">#ab1a21</color>
 </resources>
